Fixed jumping that will cause jumped section to be hidden behind sticky header

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -849,3 +849,8 @@ section #title .credits.right {
     display: none;
   }
 }
+
+div .jump {
+  padding-top: 70px;
+  margin-top: -70px;
+}
